# fastapi-crud

./: Dockerfile  LICENSE  README.md  docker-compose.yaml  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: pypi-publish.yml
fastapi_crud/: __init__.py  config.py  fastapicrud.py  router.py  schema.py  session.py  type_map.py  types.py
tests/: conftest.py  test_app.py
tests/app/: app.py  config.py  database.py  models.py
tests/app/migrations/: alembic.ini  create.sh  env.py
tests/app/migrations/versions/: 131bec8bfe90_init.py
