[metadata]
name = fastapi-crud
version = 0.0.1
author = Miika Potka
author_email = miikapotka@gmail.com
description = Automatic CRUD route generation from SQLAlchemy models for FastAPI
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/miikapo/fastapi-crud
project_urls =
    Bug Tracker = https://github.com/miikapo/fastapi-crud/issues
license = Apache License 2.0
license_files =
   LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = fastapi_crud
packages = find:
python_requires = >=3.6
install_requires =
    fastapi
    SQLAlchemy[asyncio] 

[options.packages.find]
where = fastapi_crud

[flake8]
exclude =
    ./git,
    __pycache__/,
    ./venv/,
    ./.venv/

filename = *.py
max-line-length = 100
extend-ignore = E203

max-complexity = 10
select = B,C,E,F,W,B9

per-file-ignores =
    fastapi_crud/__init__.py: F401

[mypy]
plugins = sqlalchemy.ext.mypy.plugin
